--- a/src/app/my-profile/my-profile.component.html
+++ b/src/app/my-profile/my-profile.component.html
@@ -1,5 +1,5 @@
 <section class="myProfile">
-  <div class="col-md-8 left vertical-center">
+  <div class="col-md-8 col-8 left vertical-center">
     <h1 style="font-size: 30px;">Hello I'm</h1>
     <h1 style="font-size: 50px; color: blue;">Piyush Adaniya.</h1>
     <h1 style="font-size: 35px; margin-top: 40px; margin-bottom: 20px;">
@@ -7,7 +7,7 @@
     </h1>
     <h1 style="font-size: 30px;">I'm a Full Stack Developer.</h1>
   </div>
-  <div class="right col-md-4" style="float: right;">
-    <img style="width: 352px;" src="../../assets/one.png" alt="pll" />
+  <div class="right col-md-4 col-4" style="float: right; padding: 0px;">
+    <img style="width: 100%;max-width: 27vw; height: 100vh;" src="../../assets/one.png" alt="pll" />
   </div>
 </section>
