make it better node version

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -22,7 +22,7 @@
               </mat-card-actions>
           </mat-card>
           <div class="col-md-6 col-6 right">
-              <img src="../../assets/reportingDashboardOne.png" alt="aa" style="width: 545px;height: 360px;">
+              <img src="../../assets/reportingDashboardOne.png" alt="aa" class="imgRight">
           </div>
         </div>
 <!-- -----------------------------------------------------------======================================================------------------------------------ -->
@@ -46,7 +46,7 @@
                   </mat-card-actions>  
               </mat-card>
               <div class="col-md-6 right">
-                  <img src="../../assets/img1.png" alt="aa" style="width: 545px;height: 350px;">
+                  <img src="../../assets/img1.png" alt="aa" class="imgRight">
               </div>
               
             </div>
