--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -84,6 +84,7 @@
       mat-icon-button
       (click)="drawer.toggle()"
       *ngIf="isHandset$ | async"
+      style="background-color: #0000ff; position:fixed;z-index: 99;"
     >
       <mat-icon aria-label="Side nav toggle icon">menu</mat-icon>
     </button>
